# schwimmbad

./: .coveragerc  .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cd.yml  ci.yml  python-package.yml  tests.yml
ci/travis/: install-mpi.sh
docs/: Makefile  api.rst  conf.py  contributing.rst  getting-started.rst  index.rst  install.rst  make.bat
docs/_templates/: navigation.html
docs/examples/: advanced-demo.rst  index.rst  joblib.rst  mpi.rst  script-demo.rst
docs/examples/files/: advanced-demo.py  mpi-demo.py  script-demo.py
examples/: readme-demo.py
paper/: paper.bib  paper.md
schwimmbad/: __init__.py  error.py  jl.py  mpi.py  multiprocessing.py  pool.py  serial.py  test_pools.py  utils.py
schwimmbad/tests/: test_mpi.py  test_mpi_fail.py  test_mpi_with_dill.py  test_pools.py  test_utils.py
scripts/: test_mpi.py
src/schwimmbad/: __init__.py  _test_helpers.py  decorators.py  error.py  jl.py  mpi.py  multiprocessing.py  pool.py  serial.py  utils.py
tests/: __init__.py  test_mpi.py  test_mpi_fail.py  test_mpi_with_dill.py  test_pools.py  test_utils.py
