[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "schwimmbad"
authors = [
  { name = "Adrian Price-Whelan", email = "adrianmpw@gmail.com" }
]
description = "A common interface for parallel processing pools."
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = ["dill", "multiprocess"]

[project.optional-dependencies]
all = [
  "joblib",
  "mpi4py"
]
test = [
  "schwimmbad[all]",
  "pytest >=6",
  "pytest-cov >=3",
  "pytest-astropy",
]
docs = [
  "sphinx>=7.0",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "matplotlib",
  "sphinx-automodapi",
  "pydata-sphinx-theme",
  "emcee"
]

[project.urls]
Homepage = "https://github.com/adrn/schwimmbad"
"Bug Tracker" = "https://github.com/adrn/schwimmbad/issues"
Discussions = "https://github.com/adrn/schwimmbad/discussions"
Changelog = "https://github.com/adrn/schwimmbad/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/schwimmbad/_version.py"

[tool.hatch.env.default]
features = ["test"]
scripts.test = "pytest {args}"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra", "--showlocals", "--strict-markers", "--strict-config", "--ignore-glob=*_mpi*"
]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:unclosed file:ResourceWarning",
  "ignore:unclosed <socket:ResourceWarning",
  "ignore:unclosed <ssl.SSLSocket:ResourceWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["schwimmbad"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.9"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "schwimmbad.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "numpy.*",
  "astroquery.*",
  "dustmaps.*"
]
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "W",
  "C",
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]