[metadata]
name = schwimmbad
author = adrn
author_email = adrianmpw@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/adrn/schwimmbad
description = A common interface for parallel processing pools.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = adrn/schwimmbad

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm

[options.entry_points]

[options.extras_require]
test =
    pytest
    pytest-astropy
    cython
    mpi4py
    joblib
    matplotlib
docs =
    alabaster
    emcee

[tool:pytest]
testpaths = "schwimmbad" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    schwimmbad/tests/*
    schwimmbad/*/tests/*
    schwimmbad/version*
    */schwimmbad/tests/*
    */schwimmbad/*/tests/*
    */schwimmbad/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
